--- a/diy.ini
+++ b/diy.ini
@@ -2,7 +2,7 @@
 ruleset=Emby,https://raw.githubusercontent.com/Sumuge/surge/main/embyc.list
 ruleset=Speedtest,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Speedtest/Speedtest.list
 ruleset=Proxy,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global.list
-ruleset=Proxy,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list
+ruleset=Proxy,clash-domain:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Domain.yaml
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=Proxy,[]FINAL
 
